draft canonical function for converting rendered samples

--- a/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
+++ b/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
@@ -175,29 +175,20 @@
     "import os\n",
     "import subprocess\n",
     "import tempfile\n",
-    "import warnings\n",
-    "from typing import Any, Dict, List, Optional\n",
+    "from typing import Any, Dict\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import toml\n",
     "from datasets import Dataset\n",
     "from tensorzero import (\n",
-    "    ContentBlock,\n",
     "    FloatMetricFilter,\n",
-    "    RawText,\n",
     "    TensorZeroGateway,\n",
-    "    Text,\n",
-    "    Thought,\n",
-    "    ToolCall,\n",
-    "    ToolResult,\n",
     ")\n",
-    "from tensorzero.internal import OutputMessage\n",
     "from tensorzero.util import uuid7\n",
     "from transformers import TrainingArguments\n",
     "from trl import SFTTrainer\n",
     "from unsloth import FastLanguageModel, is_bfloat16_supported\n",
-    "from unsloth.chat_templates import get_chat_template"
+    "from unsloth.chat_templates import get_chat_template\n",
+    "from utils import tensorzero_rendered_samples_to_conversations, train_val_split"
    ]
   },
   {
@@ -239,6 +230,7 @@
     "    value=FLOAT_METRIC_THRESHOLD,\n",
     "    comparison_operator=comparison_operator,\n",
     ")\n",
+    "# from tensorzero import BooleanMetricFilter\n",
     "# metric_node = BooleanMetricFilter(\n",
     "#     metric_name=METRIC_NAME,\n",
     "#     value=True  # or False\n",
@@ -282,10 +274,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rendered_inferences = tensorzero_client.experimental_render_inferences(\n",
+    "rendered_samples = tensorzero_client.experimental_render_inferences(\n",
     "    stored_inferences=stored_inferences,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the data into training and validation sets for fine-tuning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_samples, eval_samples = train_val_split(\n",
+    "    rendered_samples,\n",
+    "    val_size=VAL_FRACTION,\n",
+    "    last_inference_only=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the rendered samples to conversations for tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_conversations = tensorzero_rendered_samples_to_conversations(train_samples)\n",
+    "eval_conversations = tensorzero_rendered_samples_to_conversations(eval_samples)"
    ]
   },
   {
@@ -330,10 +359,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Reformat the rendered inferences to ChatML and tokenize"
+    "def process_conversations(inference: Dict[str, Any]):\n",
+    "    inference.update({\"add_generation_prompt\": False, \"tokenize\": False})\n",
+    "    return {\n",
+    "        \"text\": tokenizer.apply_chat_template(\n",
+    "            **inference,\n",
+    "        )\n",
+    "    }"
    ]
   },
   {
@@ -342,182 +379,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tensorzero_to_chatml_tools(tools: Optional[List[Any]]) -> List[Dict[str, Any]]:\n",
-    "    \"\"\"Convert TensorZero tools to OpenAI format.\"\"\"\n",
-    "    chatml_tools: List[Dict[str, Any]] = []\n",
-    "    if tools:\n",
-    "        for tool in tools:\n",
-    "            chatml_tools.append(\n",
-    "                {\n",
-    "                    \"type\": \"function\",\n",
-    "                    \"function\": {\n",
-    "                        \"name\": tool.name,\n",
-    "                        \"description\": tool.description,\n",
-    "                        \"parameters\": tool.parameters,\n",
-    "                    },\n",
-    "                }\n",
-    "            )\n",
-    "    return chatml_tools\n",
-    "\n",
-    "\n",
-    "def message_to_chatml(message: OutputMessage) -> Optional[List[Dict[str, Any]]]:\n",
-    "    chatml_messages: List[Dict[str, Any]] = []\n",
-    "    assert message.role in [\"user\", \"assistant\"], f\"Invalid role: {message.role}\"\n",
-    "    content: List[str] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "    for content_block in message.content:\n",
-    "        if isinstance(content_block, Text):\n",
-    "            assert content_block.arguments is None, \"Arguments should be None\"\n",
-    "            content.append(content_block.text)\n",
-    "        elif isinstance(content_block, RawText):\n",
-    "            content.append(content_block.value)\n",
-    "        elif isinstance(content_block, Thought):\n",
-    "            content.append(f\"<think>{content_block['text']}</think>\")\n",
-    "        elif isinstance(content_block, ToolCall):\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": content_block.raw_arguments,\n",
-    "                        \"name\": content_block.name,\n",
-    "                    },\n",
-    "                    \"id\": content_block.id,\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        elif isinstance(content_block, ToolResult):\n",
-    "            # Tool results get priority so that they follow the tool call in the conversation.\n",
-    "            # Any other \"user\" content will be appended in another message below.\n",
-    "            chatml_messages.append(\n",
-    "                {\n",
-    "                    \"role\": \"tool\",\n",
-    "                    \"tool_call_id\": content_block.id,\n",
-    "                    \"content\": content_block.result,\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {type(content_block)}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "    if content or tool_calls:\n",
-    "        chatml_message: Dict[str, Any] = {\"role\": message.role}\n",
-    "        if content:\n",
-    "            chatml_message[\"content\"] = \"\\n\".join(content)\n",
-    "        if tool_calls:\n",
-    "            chatml_message[\"tool_calls\"] = tool_calls\n",
-    "        chatml_messages.append(chatml_message)\n",
-    "\n",
-    "    return chatml_messages\n",
-    "\n",
-    "\n",
-    "def output_to_chatml(output: List[ContentBlock]) -> Dict[str, Any]:\n",
-    "    content: List[str] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "\n",
-    "    for content_block in output:\n",
-    "        if isinstance(content_block, Text):\n",
-    "            assert content_block.arguments is None, \"Arguments should be None\"\n",
-    "            content.append(content_block.text)\n",
-    "        elif isinstance(content_block, Thought):\n",
-    "            content.append(f\"<think>{content_block['text']}</think>\")\n",
-    "        elif isinstance(content_block, ToolCall):\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": content_block.raw_arguments,\n",
-    "                        \"name\": content_block.name,\n",
-    "                    },\n",
-    "                    \"id\": content_block.id,\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {type(content_block)}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "\n",
-    "    # Once we finish collecting all blocks, create one assistant message.\n",
-    "    output_message: Dict[str, Any] = {\"role\": \"assistant\"}\n",
-    "    if content:\n",
-    "        output_message[\"content\"] = \"\\n\".join(content)\n",
-    "    if tool_calls:\n",
-    "        output_message[\"tool_calls\"] = tool_calls\n",
-    "\n",
-    "    return output_message\n",
-    "\n",
-    "\n",
-    "conversations = []\n",
-    "for rendered_inference in rendered_inferences:\n",
-    "    messages = []\n",
-    "    model_input = rendered_inference.input\n",
-    "    if model_input.system is not None:\n",
-    "        messages.append({\"role\": \"system\", \"content\": model_input.system})\n",
-    "    for message in model_input.messages:\n",
-    "        messages.extend(message_to_chatml(message))\n",
-    "    messages.append(output_to_chatml(rendered_inference.output))\n",
-    "    # Add tools if available\n",
-    "    payload = {\n",
-    "        \"conversation\": messages,\n",
-    "        \"tokenize\": False,\n",
-    "        \"add_generation_prompt\": False,\n",
-    "    }\n",
-    "    if rendered_inference.tool_params:\n",
-    "        tools = tensorzero_to_chatml_tools(\n",
-    "            rendered_inference.tool_params.tools_available\n",
-    "        )\n",
-    "        payload[\"tools\"] = tools\n",
-    "    tokenized_messages = tokenizer.apply_chat_template(**payload)\n",
-    "\n",
-    "    # Drop conversations that have unknown content\n",
-    "    if all(msg is not None for msg in messages):\n",
-    "        conversations.append(\n",
-    "            {\"text\": tokenized_messages, \"episode_id\": rendered_inference.episode_id}\n",
-    "        )\n",
-    "\n",
-    "conversations = pd.DataFrame(conversations)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Split the data into training and validation sets for fine-tuning.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get unique episode_ids\n",
-    "unique_episode_ids = conversations[\"episode_id\"].unique()\n",
-    "\n",
-    "# Shuffle the unique episode_ids\n",
-    "np.random.seed(42)\n",
-    "np.random.shuffle(unique_episode_ids)\n",
-    "\n",
-    "# Calculate the split index for episode_ids\n",
-    "split_index = int(len(unique_episode_ids) * (1 - VAL_FRACTION))\n",
-    "\n",
-    "# Split the episode_ids into training and validation sets\n",
-    "train_episode_ids = unique_episode_ids[:split_index]\n",
-    "val_episode_ids = unique_episode_ids[split_index:]\n",
-    "\n",
-    "# Create training and validation DataFrames based on episode_ids\n",
-    "train_df = conversations[conversations[\"episode_id\"].isin(train_episode_ids)]\n",
-    "val_df = conversations[conversations[\"episode_id\"].isin(val_episode_ids)]\n",
-    "\n",
-    "# Convert to huggingface dataset\n",
-    "train_dataset = Dataset.from_pandas(train_df.drop(\"episode_id\", axis=1))\n",
-    "eval_dataset = Dataset.from_pandas(val_df.drop(\"episode_id\", axis=1))\n",
-    "\n",
-    "print(f\"Training set size: {len(train_df)}\")\n",
-    "print(f\"Validation set size: {len(val_df)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_df) / len(conversations):.2f}\")"
+    "train_dataset = Dataset.from_list(\n",
+    "    [process_conversations(sample) for sample in train_conversations]\n",
+    ")\n",
+    "eval_dataset = Dataset.from_list(\n",
+    "    [process_conversations(sample) for sample in eval_conversations]\n",
+    ")"
    ]
   },
   {
