Update the SFT procedure

--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -52,7 +52,7 @@
    "id": "73ad0d90",
    "metadata": {},
    "source": [
-    "####  IMPORTANT: Update the gateway URL below if you're not using the standard setup provided in this example"
+    "> **IMPORTANT:** Update the gateway URL below if you're not using the standard setup provided in this example"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "id": "0ec60582",
    "metadata": {},
    "source": [
-    "### Load the Dataset"
+    "## Load the Dataset"
    ]
   },
   {
@@ -130,8 +130,8 @@
    "id": "d3de6ba5",
    "metadata": {},
    "source": [
-    "### Extract Entities\n",
-    "IMPORTANT: REduce the number of concurrent request if you're running into rate limits"
+    "## Extract Entities\n",
+    "> **IMPORTANT:** Reduce the number of concurrent request if you're running into rate limits"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "id": "b6c98900",
    "metadata": {},
    "source": [
-    "### Evaluate the Performance"
+    "## Evaluate the Performance"
    ]
   },
   {
@@ -325,8 +325,8 @@
    "id": "3c534c3d",
    "metadata": {},
    "source": [
-    "### Validation Set\n",
-    "IMPORTANT: Update the list blow when you create new variants in `tensorzero.toml`"
+    "## Validation Set\n",
+    "> **IMPORTANT:** Update the list blow when you create new variants in `tensorzero.toml`"
    ]
   },
   {
@@ -340,8 +340,8 @@
     "VARIANTS_TO_EVALUATE = [\n",
     "    \"gpt_4o\",\n",
     "    \"gpt_4o_mini\",\n",
-    "    \"gpt_4o_mini_sft_fine_tuned\",\n",
-    "    \"gpt_4o_mini_sft_dpo_fine_tuned\",\n",
+    "    # \"gpt_4o_mini_sft_fine_tuned\",\n",
+    "    # \"gpt_4o_mini_sft_dpo_fine_tuned\",\n",
     "]"
    ]
   },
@@ -401,7 +401,7 @@
    "id": "394918e3",
    "metadata": {},
    "source": [
-    "### Plot Result"
+    "## Plot Result"
    ]
   },
   {
@@ -465,6 +465,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9058870b",
+   "metadata": {},
+   "source": [
+    "## Apply Spervised Fine-Tuning (SFT)\n",
+    "\n",
+    "You can run a fine-tuning recipe by opening the UI (`http://localhost:4000/`) and clicking on the `Supervised Fine-Tuning` tab. For this example, let's run fine-tuning on GPT-40 Mini (`gpt_4.1-mini-2025-04-14`) with OpenAI using the `exact_match` metric. This process may take some time.\n",
+    "\n",
+    "Once you finish fine-tuning, you'll see additional configuration blocks. For this example, we only need the `model_name` which we'll use to create a new variant in the `tensorzero.toml` file.   \n",
+    "\n",
+    "\n",
+    "```toml\n",
+    "[functions.extract_entities.variants.gpt_4o_mini_sft_fine_tuned]\n",
+    "type = \"chat_completion\"\n",
+    "model = \"openai::ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # TODO: Replace with your model ID\n",
+    "system_template = \"functions/extract_entities/initial_prompt/system_template.minijinja\"\n",
+    "json_mode = \"strict\"\n",
+    "```\n",
+    "\n",
+    "Restart the TensorZero Gateway to apply the new configuration. You can do this by killing the running container and re-running `docker compose up`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c263185",
+   "metadata": {},
+   "source": [
+    "## Apply Preference Fine-Tuning (DPO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2aab315",
+   "metadata": {},
+   "source": [
+    "Once you apply the new configuration, you can use the model to apply DPO on top of it to improve further. We'll run the DPO programmatically using the the recipe in `recipes/dpo/openai`. \n",
+    "\n",
+    "Set `TENSORZERO_CLICKHOUSE_URL=http://chuser:chpassword@localhost:8123/tensorzero` in the shell your notebook will run in."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "703152d9",
@@ -474,28 +515,12 @@
     "CONFIG_PATH = \"config/tensorzero.toml\"\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
-    "MODEL_NAME = \"gpt-4o-2024-08-06\"\n",
+    "MODEL_NAME = \"ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx\"  # Replace this with your model to apply DPO on top of SFT\n",
     "VAL_FRACTION = 0.2\n",
     "MAX_SAMPLES = 500\n",
     "\n",
-    "assert \"OPENAI_API_KEY\" in os.environ\n",
-    "assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b3bd53c",
-   "metadata": {},
-   "source": [
-    "### STEP 1: SFT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a42b3fd",
-   "metadata": {},
-   "source": [
-    "### STEP 2: DPO"
+    "# assert \"OPENAI_API_KEY\" in os.environ\n",
+    "# assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ"
    ]
   },
   {
@@ -662,8 +687,7 @@
     "\n",
     "params = {\"function_name\": FUNCTION_NAME, \"max_samples\": MAX_SAMPLES}\n",
     "df = clickhouse_client.query_df(query, params)\n",
-    "df.head()\n",
-    "print(df)"
+    "df.head()"
    ]
   },
   {
