update openai notebook

--- a/recipes/supervised_fine_tuning/openai/openai.ipynb
+++ b/recipes/supervised_fine_tuning/openai/openai.ipynb
@@ -37,11 +37,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG_PATH = \"../../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
+    "CONFIG_PATH = \"../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
-    "METRIC_NAME = \"exact_match\"\n",
+    "METRIC_NAME = \"jaccard_similarity\"\n",
     "\n",
     "# The name of the variant to use to grab the templates used for fine-tuning\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
@@ -55,9 +55,6 @@
     "# Maximum number of samples to use for fine-tuning\n",
     "MAX_SAMPLES = 100_000\n",
     "\n",
-    "# Maximum number of tokens per example to OpenAI\n",
-    "MAX_TOKENS_PER_EXAMPLE = 65_536\n",
-    "\n",
     "# The name of the model to fine-tune (supported models: https://platform.openai.com/docs/guides/fine-tuning)\n",
     "MODEL_NAME = \"gpt-4o-mini-2024-07-18\""
    ]
@@ -68,21 +65,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import os\n",
-    "import tempfile\n",
-    "import time\n",
-    "import warnings\n",
-    "from pprint import pprint\n",
-    "from typing import Any, Dict, List, Optional\n",
+    "import sys\n",
     "\n",
-    "import openai\n",
+    "tensorzero_path = os.path.abspath(os.path.join(os.getcwd(), \"../../../\"))\n",
+    "if tensorzero_path not in sys.path:\n",
+    "    sys.path.append(tensorzero_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
     "import toml\n",
     "from IPython.display import clear_output\n",
     "from tensorzero import (\n",
     "    FloatMetricFilter,\n",
+    "    OpenAISFTConfig,\n",
+    "    OptimizationJobStatus,\n",
     "    TensorZeroGateway,\n",
-    ")"
+    ")\n",
+    "\n",
+    "from recipes.util import train_val_split"
    ]
   },
   {
@@ -124,6 +132,9 @@
     "    value=FLOAT_METRIC_THRESHOLD,\n",
     "    comparison_operator=comparison_operator,\n",
     ")\n",
+    "\n",
+    "# from tensorzero import BooleanMetricFilter\n",
+    "\n",
     "# metric_node = BooleanMetricFilter(\n",
     "#     metric_name=METRIC_NAME,\n",
     "#     value=True  # or False\n",
@@ -167,146 +178,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rendered_inferences = tensorzero_client.experimental_render_inferences(\n",
+    "rendered_samples = tensorzero_client.experimental_render_inferences(\n",
     "    stored_inferences=stored_inferences,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def render_message(message: Dict[str, Any]) -> Optional[List[Dict[str, Any]]]:\n",
-    "    role = message[\"role\"]\n",
-    "    assert role in [\"user\", \"assistant\"], f\"Invalid role: {role}\"\n",
-    "    content: List[Dict[str, Any]] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "    rendered_messages: List[Dict[str, Any]] = []\n",
-    "\n",
-    "    for content_block in message[\"content\"]:\n",
-    "        if content_block[\"type\"] == \"text\":\n",
-    "            parsed_content = content_block[\"value\"]\n",
-    "            content.append({\"type\": \"text\", \"text\": parsed_content})\n",
-    "        elif content_block[\"type\"] == \"raw_text\":\n",
-    "            content.append({\"type\": \"text\", \"text\": content_block[\"value\"]})\n",
-    "        elif content_block[\"type\"] == \"thought\":\n",
-    "            content.append(\n",
-    "                {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
-    "            )\n",
-    "        elif content_block[\"type\"] == \"tool_call\" and role == \"assistant\":\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": json.dumps(content_block[\"arguments\"]),\n",
-    "                        \"name\": content_block[\"name\"],\n",
-    "                    },\n",
-    "                    \"id\": content_block[\"id\"],\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        elif content_block[\"type\"] == \"tool_result\" and role == \"user\":\n",
-    "            # Tool results get priority so that they follow the tool call in the conversation.\n",
-    "            # Any other \"user\" content will be appended in another message below.\n",
-    "            rendered_messages.append(\n",
-    "                {\n",
-    "                    \"role\": \"tool\",\n",
-    "                    \"tool_call_id\": content_block[\"id\"],\n",
-    "                    \"content\": content_block[\"result\"],\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {content_block['type']}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "\n",
-    "    if content or tool_calls:\n",
-    "        role_message: Dict[str, Any] = {\"role\": role}\n",
-    "        if content:\n",
-    "            role_message[\"content\"] = content\n",
-    "        if tool_calls:\n",
-    "            role_message[\"tool_calls\"] = tool_calls\n",
-    "        rendered_messages.append(role_message)\n",
-    "\n",
-    "    return rendered_messages\n",
-    "\n",
-    "\n",
-    "def render_output(\n",
-    "    output: List[Dict[str, Any]],\n",
-    ") -> Dict[str, Any]:\n",
-    "    \"\"\"\n",
-    "    Parses the assistant message from an observation using the provided function configuration.\n",
-    "    \"\"\"\n",
-    "    content: List[str] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "\n",
-    "    for content_block in output:\n",
-    "        if content_block[\"type\"] == \"text\":\n",
-    "            content.append({\"type\": \"text\", \"text\": content_block[\"text\"]})\n",
-    "        elif content_block[\"type\"] == \"thought\":\n",
-    "            content.append(\n",
-    "                {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
-    "            )\n",
-    "        elif content_block[\"type\"] == \"tool_call\":\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": json.dumps(content_block[\"arguments\"]),\n",
-    "                        \"name\": content_block[\"name\"],\n",
-    "                    },\n",
-    "                    \"id\": content_block[\"id\"],\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {content_block['type']}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "\n",
-    "    # Once we finish collecting all blocks, create one assistant message.\n",
-    "    output_message: Dict[str, Any] = {\"role\": \"assistant\"}\n",
-    "    if content:\n",
-    "        output_message[\"content\"] = content\n",
-    "    if tool_calls:\n",
-    "        output_message[\"tool_calls\"] = tool_calls\n",
-    "\n",
-    "    return output_message\n",
-    "\n",
-    "\n",
-    "def sample_to_openai_messages(sample) -> List[Dict[str, Any]]:\n",
-    "    rendered_messages = []\n",
-    "\n",
-    "    # Add the system message to the rendered messages\n",
-    "    # If there is data passed in or a system template there must be a system message\n",
-    "    system = sample.system\n",
-    "    if system:\n",
-    "        rendered_messages.append({\"role\": \"system\", \"content\": system})\n",
-    "\n",
-    "    # Add the input messages to the rendered messages\n",
-    "    for message in sample.messages:\n",
-    "        rendered_message = render_message(message)\n",
-    "        if rendered_message is None:\n",
-    "            # `render_message` will return None if the message contains an unknown or unsupported content block.\n",
-    "            # The entire example is dropped if this is the case.\n",
-    "            return None\n",
-    "        rendered_messages.extend(rendered_message)\n",
-    "\n",
-    "    # Add the output to the messages\n",
-    "    output = sample.output\n",
-    "    rendered_output = render_output(output)\n",
-    "    if rendered_output is None:\n",
-    "        # `render_output` will return None if the output contains an unknown or unsupported content block.\n",
-    "        # The entire example is dropped if this is the case.\n",
-    "        return None\n",
-    "    rendered_messages.append(rendered_output)\n",
-    "\n",
-    "    return {\"messages\": rendered_messages}"
+    "Split the data into training and validation sets for fine-tuning."
    ]
   },
   {
@@ -315,14 +197,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai_samples = [sample_to_openai_messages(sample) for sample in stored_inferences]"
+    "train_samples, val_samples = train_val_split(\n",
+    "    rendered_samples,\n",
+    "    val_size=VAL_FRACTION,\n",
+    "    last_inference_only=True,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split the data into training and validation sets for fine-tuning.\n"
+    "Launch the fine tuning job"
    ]
   },
   {
@@ -331,76 +217,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get unique episode_ids\n",
-    "episode_ids = list(set(sample.episode_id for sample in stored_inferences))\n",
-    "split_index = int(len(episode_ids) * VAL_FRACTION)\n",
-    "train_episode_ids = episode_ids[:split_index]\n",
-    "val_episode_ids = episode_ids[split_index:]\n",
-    "\n",
-    "train_samples = [\n",
-    "    sample for sample in stored_inferences if sample.episode_id in train_episode_ids\n",
-    "]\n",
-    "val_samples = [\n",
-    "    sample for sample in stored_inferences if sample.episode_id in val_episode_ids\n",
-    "]\n",
-    "\n",
-    "\n",
-    "print(f\"Training set size: {len(train_samples)}\")\n",
-    "print(f\"Validation set size: {len(val_samples)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_samples) / len(stored_inferences):.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Upload the training and validation datasets to OpenAI.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def upload_dataset_to_openai(samples, openai_client: openai.OpenAI) -> str:\n",
-    "    with tempfile.NamedTemporaryFile(mode=\"w\", suffix=\".jsonl\", delete=False) as f:\n",
-    "        # Write the openai_messages to the temporary file\n",
-    "        for item in samples:\n",
-    "            json.dump(item, f)\n",
-    "            f.write(\"\\n\")\n",
-    "        f.flush()\n",
-    "\n",
-    "        # Upload the file to OpenAI\n",
-    "        with open(f.name, \"rb\") as file:\n",
-    "            file_object = openai_client.files.create(file=file, purpose=\"fine-tune\")\n",
-    "\n",
-    "        return file_object.id\n",
-    "\n",
-    "\n",
-    "openai_client = openai.OpenAI()\n",
-    "\n",
-    "train_file_object_id = upload_dataset_to_openai(train_samples, openai_client)\n",
-    "val_file_object_id = upload_dataset_to_openai(val_samples, openai_client)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Launch the fine-tuning job.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fine_tuning_job = openai_client.fine_tuning.jobs.create(\n",
-    "    training_file=train_file_object_id,\n",
-    "    validation_file=val_file_object_id,\n",
+    "optimization_config = OpenAISFTConfig(\n",
     "    model=MODEL_NAME,\n",
+    ")\n",
+    "\n",
+    "job_handle = tensorzero_client.experimental_launch_optimization(\n",
+    "    train_samples=train_samples,\n",
+    "    val_samples=val_samples,\n",
+    "    optimization_config=optimization_config,\n",
     ")"
    ]
   },
@@ -423,9 +247,14 @@
     "    clear_output(wait=True)\n",
     "\n",
     "    try:\n",
-    "        job_status = openai_client.fine_tuning.jobs.retrieve(fine_tuning_job.id)\n",
-    "        pprint(job_status.to_dict())\n",
-    "        if job_status.status in (\"succeeded\", \"failed\", \"cancelled\"):\n",
+    "        job_info = tensorzero_client.experimental_poll_optimization(\n",
+    "            job_handle=job_handle\n",
+    "        )\n",
+    "        print(job_info)\n",
+    "        if job_info.status in (\n",
+    "            OptimizationJobStatus.Completed,\n",
+    "            OptimizationJobStatus.Failed,\n",
+    "        ):\n",
     "            break\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -446,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fine_tuned_model = job_status.fine_tuned_model\n",
+    "fine_tuned_model = job_info.output[\"routing\"][0]\n",
     "model_config = {\n",
     "    \"models\": {\n",
     "        fine_tuned_model: {\n",
@@ -474,7 +303,7 @@
     "\n",
     "You can change the weight to enable a gradual rollout of the new model.\n",
     "\n",
-    "You might also add other parameters (e.g. `MAX_TOKENS_PER_EXAMPLE`, `temperature`) to the variant section in the config file.\n"
+    "You might also add other parameters (e.g. `temperature`) to the variant section in the config file.\n"
    ]
   }
  ],
