--- a/recipes/supervised_fine_tuning/together/together.ipynb
+++ b/recipes/supervised_fine_tuning/together/together.ipynb
@@ -40,11 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG_PATH = \"../../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
+    "CONFIG_PATH = \"../../../examples/data-extraction-ner/config/tensorzero.toml\"\n",
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
-    "METRIC_NAME = \"exact_match\"\n",
+    "METRIC_NAME = \"jaccard_similarity\"\n",
     "\n",
     "# The name of the variant to use to grab the templates used for fine-tuning\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"  # It's OK that this variant uses a different model than the one we're fine-tuning\n",
@@ -70,6 +70,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ec7ccefd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "tensorzero_path = os.path.abspath(os.path.join(os.getcwd(), \"../../../\"))\n",
+    "if tensorzero_path not in sys.path:\n",
+    "    sys.path.append(tensorzero_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6730012c",
    "metadata": {},
    "outputs": [],
@@ -79,18 +94,18 @@
     "import subprocess\n",
     "import tempfile\n",
     "import time\n",
-    "import warnings\n",
     "from pprint import pprint\n",
-    "from typing import Any, Dict, List, Optional\n",
+    "from typing import Any, Dict, List\n",
     "\n",
     "import requests\n",
     "import toml\n",
     "from IPython.display import clear_output\n",
     "from tensorzero import (\n",
     "    FloatMetricFilter,\n",
-    "    RenderedSample,\n",
     "    TensorZeroGateway,\n",
-    ")"
+    ")\n",
+    "\n",
+    "from recipes.util import tensorzero_rendered_samples_to_conversations, train_val_split"
    ]
   },
   {
@@ -135,6 +150,7 @@
     "    value=FLOAT_METRIC_THRESHOLD,\n",
     "    comparison_operator=comparison_operator,\n",
     ")\n",
+    "# from tensorzero import BooleanMetricFilter\n",
     "# metric_node = BooleanMetricFilter(\n",
     "#     metric_name=METRIC_NAME,\n",
     "#     value=True  # or False\n",
@@ -182,9 +198,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rendered_inferences = tensorzero_client.experimental_render_inferences(\n",
+    "rendered_samples = tensorzero_client.experimental_render_inferences(\n",
     "    stored_inferences=stored_inferences,\n",
     "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a9c7bf4",
+   "metadata": {},
+   "source": [
+    "Split the data into training and validation sets for fine-tuning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a01b38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_samples, val_samples = train_val_split(\n",
+    "    rendered_samples,\n",
+    "    val_size=VAL_FRACTION,\n",
+    "    last_inference_only=True,\n",
     ")"
    ]
   },
@@ -193,226 +231,22 @@
    "id": "a2f6245c",
    "metadata": {},
    "source": [
-    "Render the inputs using the templates.\n"
+    "Convert the rendered samples to openai format"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "549d4dce",
+   "id": "64cfd501",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def warning_message(role: str) -> str:\n",
-    "    return (\n",
-    "        f\"Together.ai does not support multiple content blocks per message. \"\n",
-    "        f\"We have chosen to concatenate the text across all content blocks for the message with role '{role}'. \"\n",
-    "        f\"You may want to manually review this behavior.\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def render_message(message: Dict[str, Any]) -> Optional[List[Dict[str, Any]]]:\n",
-    "    role = message.role\n",
-    "    assert role in [\"user\", \"assistant\"], f\"Invalid role: {role}\"\n",
-    "    content: List[Dict[str, Any]] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "    rendered_messages: List[Dict[str, Any]] = []\n",
-    "\n",
-    "    for content_block in message.content:\n",
-    "        if content_block.type not in [\"text\", \"raw_text\"] and DROP_INVALID_MESSAGES:\n",
-    "            warnings.warn(\n",
-    "                f\"Together.ai may not support content block type: {content_block.type}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "        if content_block.type == \"text\":\n",
-    "            parsed_content = content_block.value\n",
-    "            content.append({\"type\": \"text\", \"text\": parsed_content})\n",
-    "        elif content_block.type == \"raw_text\":\n",
-    "            content.append({\"type\": \"text\", \"text\": content_block.value})\n",
-    "        elif content_block.type == \"thought\":\n",
-    "            content.append(\n",
-    "                {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
-    "            )\n",
-    "        elif (\n",
-    "            content_block.type == \"tool_call\"\n",
-    "            and role == \"assistant\"\n",
-    "            and not DROP_INVALID_MESSAGES\n",
-    "        ):\n",
-    "            warnings.warn(\n",
-    "                \"Together.ai may not support tool calls in assistant messages.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": json.dumps(content_block.arguments),\n",
-    "                        \"name\": content_block.name,\n",
-    "                    },\n",
-    "                    \"id\": content_block.id,\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        elif (\n",
-    "            content_block.type == \"tool_result\"\n",
-    "            and role == \"user\"\n",
-    "            and not DROP_INVALID_MESSAGES\n",
-    "        ):\n",
-    "            warnings.warn(\n",
-    "                \"Together.ai may not support tool results in user messages.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            # Tool results get priority so that they follow the tool call in the conversation.\n",
-    "            # Any other \"user\" content will be appended in another message below.\n",
-    "            rendered_messages.append(\n",
-    "                {\n",
-    "                    \"role\": \"tool\",\n",
-    "                    \"tool_call_id\": content_block.id,\n",
-    "                    \"content\": content_block.result,\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {content_block.type}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "\n",
-    "    if content or tool_calls:\n",
-    "        role_message: Dict[str, Any] = {\"role\": role}\n",
-    "        if content:\n",
-    "            if len(content) > 1:\n",
-    "                warnings.warn(warning_message(role), UserWarning)\n",
-    "            role_message[\"content\"] = \"\\n\".join([c.text for c in content])\n",
-    "        if tool_calls:\n",
-    "            role_message[\"tool_calls\"] = tool_calls\n",
-    "        rendered_messages.append(role_message)\n",
-    "\n",
-    "    return rendered_messages\n",
-    "\n",
-    "\n",
-    "def render_output(\n",
-    "    output: Dict[str, Any],\n",
-    ") -> Optional[Dict[str, Any]]:\n",
-    "    \"\"\"\n",
-    "    Parses the assistant message from an observation using the provided function configuration.\n",
-    "    \"\"\"\n",
-    "    content: List[Dict[str, Any]] = []\n",
-    "    tool_calls: List[Dict[str, Any]] = []\n",
-    "\n",
-    "    for content_block in output:\n",
-    "        if content_block.type != \"text\" and DROP_INVALID_MESSAGES:\n",
-    "            warnings.warn(\n",
-    "                f\"Together.ai may not support content block type: {content_block.type}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "        if content_block.type == \"text\":\n",
-    "            content.append({\"type\": \"text\", \"text\": content_block.text})\n",
-    "        elif content_block.type == \"thought\":\n",
-    "            content.append(\n",
-    "                {\"type\": \"text\", \"text\": f\"<think>{content_block.text}</think>\"}\n",
-    "            )\n",
-    "        elif content_block.type == \"tool_call\" and not DROP_INVALID_MESSAGES:\n",
-    "            warnings.warn(\n",
-    "                \"Together.ai may not support tool calls in assistant messages.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            tool_calls.append(\n",
-    "                {\n",
-    "                    \"function\": {\n",
-    "                        \"arguments\": json.dumps(content_block.arguments),\n",
-    "                        \"name\": content_block.name,\n",
-    "                    },\n",
-    "                    \"id\": content_block.id,\n",
-    "                    \"type\": \"function\",\n",
-    "                }\n",
-    "            )\n",
-    "        else:\n",
-    "            warnings.warn(\n",
-    "                f\"We do not support content block type: {content_block.type}, dropping example.\",\n",
-    "                UserWarning,\n",
-    "            )\n",
-    "            return None\n",
-    "\n",
-    "    # Once we finish collecting all blocks, create one assistant message.\n",
-    "    output_message: Dict[str, Any] = {\"role\": \"assistant\"}\n",
-    "    if content:\n",
-    "        if len(content) > 1:\n",
-    "            warnings.warn(warning_message(\"assistant\"), UserWarning)\n",
-    "        output_message[\"content\"] = \"\\n\".join([c.text for c in content])\n",
-    "    if tool_calls:\n",
-    "        output_message[\"tool_calls\"] = tool_calls\n",
-    "\n",
-    "    return output_message\n",
-    "\n",
-    "\n",
-    "def sample_to_conversational_messages(sample: RenderedSample) -> List[Dict[str, Any]]:\n",
-    "    rendered_messages = []\n",
-    "\n",
-    "    # Add the system message to the rendered messages\n",
-    "    # If there is data passed in or a system template there must be a system message\n",
-    "    system = sample.system\n",
-    "    if system:\n",
-    "        rendered_messages.append({\"role\": \"system\", \"content\": system})\n",
-    "\n",
-    "    # Add the input messages to the rendered messages\n",
-    "    for message in sample.messages:\n",
-    "        rendered_message = render_message(message)\n",
-    "        if rendered_message is None:\n",
-    "            # `render_message` will return None if the message contains an unknown or unsupported content block.\n",
-    "            # The entire example is dropped if this is the case.\n",
-    "            return None\n",
-    "        rendered_messages.extend(rendered_message)\n",
-    "\n",
-    "    # Add the output to the messages\n",
-    "    output = sample.output\n",
-    "    rendered_output = render_output(output)\n",
-    "    if rendered_output is None:\n",
-    "        # `render_output` will return None if the output contains an unknown or unsupported content block.\n",
-    "        # The entire example is dropped if this is the case.\n",
-    "        return None\n",
-    "    rendered_messages.append(rendered_output)\n",
-    "\n",
-    "    return {\"messages\": rendered_messages}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c501d75",
-   "metadata": {},
-   "source": [
-    "Split the data into training and validation sets for fine-tuning.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bee6aaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get unique episode_ids\n",
-    "episode_ids = list(set(sample.episode_id for sample in stored_inferences))\n",
-    "split_index = int(len(episode_ids) * VAL_FRACTION)\n",
-    "train_episode_ids = episode_ids[:split_index]\n",
-    "val_episode_ids = episode_ids[split_index:]\n",
-    "\n",
-    "train_samples = [\n",
-    "    sample_to_conversational_messages(sample)\n",
-    "    for sample in rendered_inferences\n",
-    "    if sample.episode_id in train_episode_ids\n",
-    "]\n",
-    "val_samples = [\n",
-    "    sample_to_conversational_messages(sample)\n",
-    "    for sample in rendered_inferences\n",
-    "    if sample.episode_id in val_episode_ids\n",
-    "]\n",
-    "\n",
-    "\n",
-    "print(f\"Training set size: {len(train_samples)}\")\n",
-    "print(f\"Validation set size: {len(val_samples)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_samples) / len(stored_inferences):.2f}\")"
+    "train_samples = tensorzero_rendered_samples_to_conversations(\n",
+    "    train_samples, conversation_key=\"messages\", join_text_blocks=True\n",
+    ")\n",
+    "val_samples = tensorzero_rendered_samples_to_conversations(\n",
+    "    val_samples, conversation_key=\"messages\", join_text_blocks=True\n",
+    ")"
    ]
   },
   {
